--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -88,7 +88,7 @@ Also, throughout this section and the rest of this chapter, an example waveform 
 	\label{fig:glockwaveform}
 \end{figure}
 
-\subsubsection{Frequency analysis and Fourier Transforms}
+\subsubsection{Frequency analysis and the Fourier Transform}
 \label{sec:freqanal}
 
 The Fourier Transform originated as an integral transform in mathematics, which are a class of ``useful tools for solving problems involving certain types of partial differential equations (PDE), mainly when their solutions on the corresponding domains of definition are difficult to deal with'' \parencite[54]{fourierhistory}. The Fourier Transform was originally introduced by Joseph Fourier in his earlier papers \parencite{fourierhist1, fourierhist2}, and fully expanded and collected in his seminal work on heat \parencite{fourierheat}. The connection of the Fourier Transform to music is described by \citeauthor{fouriermusic}, who state \hlblu{that:}
