--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -49,7 +49,7 @@ In this section, I will compare and contrast the expected outputs of the STFT an
 
 The STFT was described in Section \ref{sec:jointtfa} and its rectangular matrix output was shown in Figure \ref{fig:stftdiag}.
 
-The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime variant of the Nonstationary Gabor Transform (NSGT) shown in section \ref{sec:theorynsgt}. The sliCQT and NSGT both output a ragged matrix characteristic to nonuniform frequency transforms described in \ref{sec:raggedtf} and shown in Figure \ref{fig:raggedslicqt}. In contrast, the STFT can be thought of as a uniform frequency transform, because its frequency bins are uniformly or evenly spaced.
+The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime variant of the Nonstationary Gabor Transform (NSGT) shown in section \ref{sec:theorynsgt}. The sliCQT and NSGT both output a ragged matrix characteristic to nonuniform frequency transforms described in \ref{sec:raggedtf} and shown in Figure \ref{fig:raggedslicqt}. By contrast, the STFT can be thought of as a uniform frequency transform, because its frequency bins are uniformly or evenly spaced.
 
 The sliCQT splits the input signal into fixed-size overlapping slices and computes discrete Fourier Transform (DFT) coefficients per slice, while the NSGT computes DFT coefficients for the whole input signal. To make the output of the sliCQT comparable to the NSGT, the slices must be overlap-added as described in Section \ref{sec:theoryslicqt}.
 
@@ -66,7 +66,7 @@ When designing a data structure for the sliCQT, each of these points has to be a
 \subsubsection{3D shape of the sliCQT compared to the 2D STFT}
 \label{sec:stftslicqtcomp1}
 
-The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime implementation of the NSGT, consisting of DFT coefficients computed for the input signal split into overlapping slices, shown in Figure \ref{fig:slicqtukeys}. The sliCQT therefore returns multiple slices of DFT coefficients for an input signal of length $N > sllen$. These slices need to be overlap-added with 50\% of the previous and next slice to produce a spectrogram, because each slice is symmetrically zero-padded to twice its length to reduce time-aliasing, which was described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. This is a characteristic specific to the sliCQT. The NSGT, which is the ancestor of the sliCQT not designed for realtime processing, outputs the spectrogram directly without requiring any overlap-add.
+The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime implementation of the NSGT, consisting of DFT coefficients computed for the input signal split into overlapping slices, shown in Figure \ref{fig:slicqtukeys}. The sliCQT therefore returns the DFT coefficients of consecutive slices of length $sllen$ of an input signal of length $N > sllen$. These slices need to be overlap-added with 50\% of the previous and next slice to produce a spectrogram, because each slice is symmetrically zero-padded to twice its length to reduce time-aliasing, which was described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. This is a characteristic specific to the sliCQT. The NSGT, which is the ancestor of the sliCQT not designed for realtime processing, outputs the spectrogram directly without requiring any overlap-add.
 
 Figure \ref{fig:raggedslicqtoverlapadd} shows the procedure of overlap-adding ragged adjacent slices of the sliCQT to produce the final overlap-added ragged transform.
 
@@ -97,11 +97,11 @@ After overlap-adding the sliCQT, the result is a ragged matrix representing a no
 
 When choosing a data structure to represent the sliCQT in PyTorch, the two characteristics described in the previous sections must be addressed, which are the adjacent slices that need to be overlap-added, and the raggedness of the slices and final overlap-added transform from the nonuniform time-frequency resolution.
 
-Due to limitations in the PyTorch library, jagged or ragged tensors (which are the equivalent of irregular or ragged matrices) are not yet supported.\footnote{\url{https://github.com/pytorch/pytorch/issues/25032}} That means that the ragged sliCQT cannot be represented by a single tensor, due to the irregular or ragged shape of the underlying matrix from the time-frequency resolutions.
+Due to limitations in the PyTorch library, jagged or ragged tensors (which are the equivalent of irregular or ragged matrices) are not yet supported.\footnote{\url{https://github.com/pytorch/pytorch/issues/25032}} That means that the ragged sliCQT cannot be represented by a single tensor, due to the irregular or ragged shape of the underlying matrix from the different time-frequency resolutions.
 
-Therefore, to represent the raggedness of the noniform time-frequency resolution, the data structure chosen was a list of tensors. The list data structure in Python was described in Section \ref{sec:pythonbasics}. Each element of the list contains a tensor for the groups of frequency bins that have the same time-frequency resolution and can fit in the same tensor or matrix.
+Therefore, to represent the raggedness of the noniform time-frequency resolution, the data structure chosen was a list of tensors. The list data structure in Python was described in Section \ref{sec:pythonbasics}. Each element of the list contains a tensor for the groups of frequency bins that have the same time-frequency resolution and can therefore fit in the same tensor or matrix.
 
-As described in the previous section, the sliCQT returns 2D time-frequency matrices per slice of the input signal, and multiple slices are needed to represent input signals longer than the slice length. Therefore, a 3D tensor with the dimensios time, frequency, and slice are used to represent the transform of each slice. The 3D tensor, when overlap-added, is converted to a 2D tensor with dimensions of time and frequency, which is equivalent to the 2D time-frequency dimensions of the STFT. Figure \ref{fig:3dslicqola2d} shows how the list of 3D tensors is converted to a list of 2D tensors by the overlap-add procedure.
+As described in the previous section, the sliCQT returns 2D time-frequency matrices per slice of the input signal, and multiple slices are needed to represent input signals longer than the slice length. Therefore, a 3D tensor with the dimensions time, frequency, and slice are used to represent the transform of each slice. The 3D tensor, when overlap-added, is converted to a 2D tensor with dimensions of time and frequency, which is equivalent to the 2D time-frequency dimensions of the STFT. Figure \ref{fig:3dslicqola2d} shows how the list of 3D tensors is converted to a list of 2D tensors by the overlap-add procedure.
 
 \begin{figure}[ht]
 	\centering
