--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -1,12 +1,12 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
-\renewcommand{\abstractname}{Acknowledgement}
-\begin{abstract}
-       I would like to take this moment to apologize... to ABSOLUTELY NOBODY!
-\end{abstract}
-
-\newpagefill
+%\renewcommand{\abstractname}{Acknowledgement}
+%\begin{abstract}
+%       I would like to take this moment to apologize... to ABSOLUTELY NOBODY!
+%\end{abstract}
+%
+%\newpagefill
 
 \renewcommand{\abstractname}{Abstract}
 \begin{abstract}
