--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -37,7 +37,7 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \textcite{dictionary} note that the first use of the STFT was by \textcite{gabor1946} to analyze a speech signal, which used fixed-size Gaussian windows. This was called the Gabor transform, and is now considered a special case of the STFT \parencite{dictionary}.
 
-The Constant-Q Transform was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instrument and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original Constant-Q Transform and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequencies, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
+The Constant-Q Transform was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instrument and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original Constant-Q Transform and the Fourier Transform is shown in Figure \ref{fig:violin}. From the use of short windows in the high frequency regions, the CQT demonstrates good time resolution \parencite{cqtransient} in the region of transients and broadband signals, which are important for timbre and instrument identification \parencite{timbretransients1, timbretransients2}.
 
 \begin{figure}[ht]
 	\centering
@@ -47,7 +47,7 @@ The Constant-Q Transform was originally proposed by \textcite{jbrown} to analyze
 	\label{fig:violin}
 \end{figure}
 
-Building on the Gabor transform (or STFT), and using the Constant-Q Transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with a varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
+Building on the Gabor transform (or STFT), and using the Constant-Q Transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
 
 \begin{figure}[ht]
 	\centering
@@ -60,18 +60,18 @@ Building on the Gabor transform (or STFT), and using the Constant-Q Transform as
 
 Several music demixing papers \parencite{fitzgerald1, driedger, tftradeoff1, tftradeoff2} describe the use of different window sizes of the STFT to improve source separation performance. In contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which can replace the need to explicitly trade-off of time and frequency resolution.
 
-Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}. The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQT can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the task, e.g. musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python\footnote{\url{https://github.com/grrrr/nsgt}}, allowing for reproducibility and further research.
+Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}. The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQT can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the task, e.g. musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python,\footnote{\url{https://github.com/grrrr/nsgt}} allowing for reproducibility and further research.
 
 Open-Unmix \parencite{umx} is a state-of-the-art deep neural network for music demixing based on the STFT. The reference implementation is published as fully open-source software\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further music demixing research. The objective of this thesis is to adapt Open-Unmix to use the sliCQT instead of the STFT. The goal is to present a viable music demixing application with the sliCQT.
 
 \subsection{Contribution and results}
 
-My first contribution in this thesis is the adaptation of the reference Python NSGT and sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch,\footnote{\url{https://pytorch.org}} a modern deep learning framework with graphical processing unit (GPU) support. This allows the NSGT and sliCQT to be computed on the GPU, which due to its capabilities for parallel computing is the preferred device on which to train deep neural networks \parencite{pytorch}. The resulting library, which I released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQT in any GPU-based machine or deep learning model.
+My first contribution in this thesis is the adaptation of the reference Python NSGT and sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch,\footnote{\url{https://pytorch.org}} a modern deep learning framework with graphical processing unit (GPU) support. This allows the NSGT and sliCQT to be computed on the GPU, which, due to its capabilities for parallel computing, is the preferred device on which to train deep neural networks \parencite{pytorch}. The resulting library, which I released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQT in any GPU-based machine learning or deep learning model.
 
-My second contribution in this thesis is the adaptation of the reference Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing \parencite{umx} to use the sliCQT. Ideas were also incorporated from CrossNet-OpenUnmix \parencite{xumx}, which is a further evolution of Open-Unmix. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a neural network which performs the task of music demixing using the sliCQT. It scored lower in its music demixing performance than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research.
+My second contribution in this thesis is the adaptation of Open-Unmix, a deep neural network for music demixing\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \parencite{umx}, to replace the sliCQT with STFT. Ideas were also incorporated from CrossNet-Open-Unmix \parencite{xumx}, which is a variant of Open-Unmix, and the Convolutional Denoising Autoencoder \parencite{plumbley1}, a different deep neural network for music demixing. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a neural network which performs the task of music demixing using the sliCQT. It scored lower in its music demixing performance than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research.
 
 \subsection{Outline}
 
-This thesis is organized as follows. In Section \ref{sec:background}, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to a few recurring software and Python code concepts, and a survey on the history of music source separation and music demixing. In Section \ref{sec:methodology}, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In Section \ref{sec:experiment}, I will show and discuss the experimental results, and in Section \ref{sec:conclusion} I will conclude the thesis.
+This thesis is organized as follows. In Section \ref{sec:background}, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to software and Python code concepts, and a survey of music source separation and music demixing. In Section \ref{sec:methodology}, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In Section \ref{sec:experiment}, I will show and discuss the experimental results, and in Section \ref{sec:conclusion} I will conclude the thesis.
 
 \end{document}
