--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -8,10 +8,10 @@ In the task of music demixing, a mixed song is separated into estimates of its i
 
 Methods of music demixing based on the STFT have addressed the time-frequency limitation by using multiple STFTs, or by using different time-frequency transforms like the Constant-Q Transform (CQT). The CQT has a varying time-frequency resolution, where low-frequency regions are analyzed with a high frequency resolution, and high-frequency regions are analyzed with a high time resolution, which is appropriate for both musical and auditory analysis.
 
-The sliced Constant-Q Transform (sliCQT) is a realtime implementation of the Nonstationary Gabor Transform (NSGT). The NSGT and sliCQT provide a method for computing time-frequency transforms with complex-valued Fourier coefficients and a perfect inverse, originally designed to implement an invertible CQT, but they support arbitrary, nonuniform frequency scales.
+The sliced Constant-Q Transform (sliCQT) is a realtime implementation of the Nonstationary Gabor Transform (NSGT). The NSGT and sliCQT provide a method for computing time-frequency transforms with complex-valued Fourier coefficients and a perfect inverse. They were originally designed to implement an invertible CQT, but they support arbitrary nonuniform frequency scales (e.g., psychoacoustic scales like the mel and Bark scales).
 
-In this thesis, the sliCQT was explored as a replacement of the STFT in UMX and X-UMX, in a newly proposed model called xumx-sliCQ. The goal was to use the sliCQT with an appropriately-chosen frequency scale to see if it could improve the STFT-based music demixing performance of UMX and X-UMX. Unfortunately, the proposed model, xumx-sliCQ, failed to improve on UMX and X-UMX. However, the creation of xumx-sliCQ in this thesis led to several contributions to the current Python ecosystem of music demixing.
+In this thesis, the sliCQT was explored as a replacement of the STFT in UMX and X-UMX, in a newly proposed model called xumx-sliCQ. The goal was to use the sliCQT with an custom frequency scale to see if it could improve on the STFT-based music demixing performance of UMX and X-UMX. Unfortunately, the proposed model, xumx-sliCQ, performed worse than UMX and X-UMX. However, the creation of xumx-sliCQ in this thesis led to several contributions to the current Python ecosystem of music demixing.
 
-First, the PyTorch implementation of the NSGT/sliCQT allows these transforms to be used in future GPU neural networks, and it improved the performance of computing the transforms by \textasciitilde3.4-4.7x over the original library, depending on whether the CPU or GPU is used. Second, the CuPy speedup of the BSS (Blind Source Separation) metrics library can reduce the time taken for music demixing and source separation evaluations by 2-2.5x. Finally, xumx-sliCQ demonstrated the first working prototype of a sliCQT-based music demixing neural network using the GPU and PyTorch, and different frequency scales or network architectures may achieve greater success in the future.
+First, the PyTorch implementation of the NSGT/sliCQT allows these transforms to be used in future GPU neural networks, and it sped up the computation of the transforms compared to the original library by \textasciitilde4x. Second, the GPU speedup of the BSS (Blind Source Separation) metrics library can speed up evaluations of music demixing and source separation by \textasciitilde2x. Finally, xumx-sliCQ demonstrated the first working prototype of a sliCQT-based deep neural network for music demixing. Different frequency scales or network architectures may achieve greater success in the future.
 
 \end{document}
