--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -17,7 +17,7 @@
 
 \renewcommand{\abstractname}{R{\'e}sum{\'e}}
 \begin{abstract}
-	La s{\'e}paration des sources musicales est la t{\^a}che d'{\'e}xtraire une estimation d'un ou plusieurs sources ou instruments musicales (p. ex. les percussions ou la voix) dans un enregistrement audio musicale. La t{\^a}che du d{\'e}mixage de musique consid{\`e}re le cas ou l'enregistrement audio musicale est s{\'e}par{\'e} en tous ses sources constitutifs qui peuvent {\^e}tre resomm{\'e}s pour recr{\'e}er l'ensemble d'origine. Les mod{\`e}les pour la d{\'e}mixage de musique qui utilisent la transformée de Fourier {\`a} court terme (TFCT) pour repr{\'e}senter les signaux musicales sont populaires est ont achev{\'e} du succ{\'e}s au cours des derni{\`e}res ann{\'e}es. Toutefois, la r{\'e}solution fix{\'e}e temporelle et fr{\'e}quentielle de la TFCT, r{\'e}sultant du principe d'incertitude de temps-fréquences, n{\'e}cessite un compromis entre la r{\'e}solution temporelle et fr{\'e}quentielle qui peu affecter consid{\'e}rablement les r{\'e}sultats du d{\'e}mixage de musique. La transform{\'e}e Constant-Q en tranche (sliCQT) est une transform{\'e}e temps-fr{\'e}quence avec une r{\'e}solution variable temporelle et fr{\'e}quentielle qui {\'e}vite le compromis de la TFCT. Le mod{\`e}le propos{\'e} par ce th{\`e}se remplace la TFCT par la sliCQT dans un mod{\`e}le de d{\'e}mixage de musique, pour investiguer l'impact sur les r{\'e}sultats.
+	La s{\'e}paration des sources musicales est la t{\^a}che d'{\'e}xtraire une estimation d'un ou plusieurs sources ou instruments musicales (p. ex. les percussions ou la voix) dans un enregistrement audio musicale. La t{\^a}che du d{\'e}mixage de musique consid{\`e}re le cas ou l'enregistrement audio musicale est s{\'e}par{\'e} en tous ses sources constitutifs qui peuvent {\^e}tre resomm{\'e}s pour recr{\'e}er l'ensemble d'origine. Les mod{\`e}les pour la d{\'e}mixage de musique qui utilisent la transformée de Fourier {\`a} court terme (TFCT) pour repr{\'e}senter les signaux musicales sont populaires est ont achev{\'e} du succ{\'e}s au cours des derni{\`e}res ann{\'e}es. Toutefois, la r{\'e}solution fix{\'e}e temporelle et fr{\'e}quentielle de la TFCT, r{\'e}sultant du principe d'incertitude de temps-fréquences, n{\'e}cessite un compromis entre la r{\'e}solution temporelle et fr{\'e}quentielle qui peu affecter consid{\'e}rablement les r{\'e}sultats du d{\'e}mixage de musique. La transform{\'e}e Constant-Q en tranche (sliCQT) est une transform{\'e}e temps-fr{\'e}quence avec une r{\'e}solution variable temporelle et fr{\'e}quentielle qui {\'e}vite le compromis de la TFCT. Le mod{\`e}le propos{\'e} par cette th{\`e}se remplace la TFCT par la sliCQT dans un mod{\`e}le de d{\'e}mixage de musique, pour investiguer l'impact sur les r{\'e}sultats.
 \end{abstract}
 
 \end{document}
